# soma_media

./: .gitignore  AGENTS.md  Cargo.toml  DEPLOYMENT.md  GPU_README.md  PHASE1_COMPLETE.md  PHASE3_COMPLETE.md  PRODUCTION_READY.md  test_real_data.sh  test_simple.sh
.github/: copilot-instructions.md
.github/instructions/: SIGIL_USAGE.instructions.md  UMA_Interface.instructions.md  dependencies.instructions.md
.github/prompts/: plan-somaMediaEnhancements.prompt.md
cards/: organ.toml
examples/: bench_all.rs  bench_batch.rs  bench_demosaic.rs  bench_parallel_demosaic.rs  test_ahd_only.rs  test_all_raws.rs  test_auto_exposure.rs  test_camera_profile.rs  test_channel_order.rs  test_data_layout.rs  test_dcraw.rs  test_default.rs  test_demosaic.rs  test_dims.rs  test_embedded_debug.rs  test_exp_correc.rs  test_exposure_comp.rs  test_exposure_visual.rs  test_fast_preview.rs  test_full_pipeline.rs  test_gpu_acceleration.rs  test_images.rs  test_libraw_direct_write.rs  test_libraw_output.rs  test_metadata.rs  test_mime_detect.rs  test_orientation.rs  test_ppm_header.rs  test_presets.rs  test_profiles.rs  test_raw_as_is.rs  test_raw_debug.rs  test_raw_direct.rs  test_raw_exposure.rs  test_raw_phase1.rs  test_raw_preview.rs  test_real_data.rs  test_recovery.rs  test_timing_breakdown.rs  test_webp_encode.rs  (+1 more)
src/: audio.rs  compute_client.rs  demosaic.rs  error.rs  ffmpeg.rs  gpu.rs  image.rs  lib.rs  metadata.rs  metrics.rs  organ.rs  profiles.rs  raw.rs  validation.rs  video.rs
tests/: integration_tests.rs
