[package]
name = "soma_media"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
rustfft = "6"  # For mel spectrogram generation
ndarray = "0.15"  # Array operations for spectrograms
image = "0.25"  # Image loading for video frames
tracing = "0.1"
# UMA interface dependencies
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
